tests/baselines/reference/staticPropSuper.errors.txt
staticPropSuper.ts(16,5): error TS2377: Constructors for derived classes must contain a 'super' call.
staticPropSuper.ts(24,5): error TS2377: Constructors for derived classes must contain a 'super' call.
staticPropSuper.ts(32,5): error TS2377: Constructors for derived classes must contain a 'super' call.


==== staticPropSuper.ts (3 errors) ====
    class A {
    }
    
    class B extends A {
        public static s: number = 9;
    
        constructor() {
            var x = 1; // should not error
            super();
        }
    }
    
    class C extends A {
        public p: number = 10;
    
        constructor() {
        ~~~~~~~~~~~
!!! error TS2377: Constructors for derived classes must contain a 'super' call.
            var x = 1; // should error
        }
    }
    
    class D extends A {
        private p: number = 11;
    
        constructor() {
        ~~~~~~~~~~~
!!! error TS2377: Constructors for derived classes must contain a 'super' call.
            var x = 1; // should error
        }
    }
    
    class E extends A {
        p: number = 12;
    
        constructor() {
        ~~~~~~~~~~~
!!! error TS2377: Constructors for derived classes must contain a 'super' call.
            var x = 1; // should error
        }
    }